Moved dropdown in annotator to right and prevented controls from covering text.
* all divs getting a padding to right otherwise to many exceptions

--- a/neonion/static/less/partials/base.less
+++ b/neonion/static/less/partials/base.less
@@ -196,6 +196,11 @@ body {
 .dropdown-menu {
   white-space: nowrap;
 
+  &.dropdown-menu-side {
+    top: 0px;
+    left: 70px + @gap-h/2;
+  }
+
   .dropdown-item {
     i {
       vertical-align: top;
